--- a/styles.css
+++ b/styles.css
@@ -234,7 +234,7 @@ p {
 .subheadingtext3{
     opacity: 40%;
 }  
-.tsubheading2{
+.subheading2{
     display: flex;
     align-items: center;
     margin-bottom: 20px;
